Closed Bug 1877618 Opened 1 year ago Closed 1 year ago

Perma [tier 2] /builds/worker/checkouts/gecko/widget/gtk/nsLookAndFeel.cpp:1646:21: error: loop variable 'mapping' creates a copy from type 'const nsLookAndFeel::InitializeGlobalSettings()::actionMapping' [-Werror=range-loop-construct]

Categories

(Core :: Widget: Gtk, defect, P5)

defect

Tracking

()

RESOLVED FIXED
124 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox122 --- unaffected
firefox123 --- unaffected
firefox124 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: stransky)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: imoraru [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=445283463&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/bQixVfxVRCKc-GY76zonIA/runs/0/artifacts/public/logs/live_backing.log


[task 2024-01-31T05:41:54.145Z] 05:41:54     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/widget/gtk'
[task 2024-01-31T05:41:54.150Z] 05:41:54     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/gcc/bin/g++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/c++/8 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu/c++/8 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -o Unified_cpp_widget_gtk2.o -c  -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DNDEBUG=1 -DTRIMMED=1 -DCAIRO_GFX '-DMOZ_APP_NAME="firefox"' -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/widget/gtk -I/builds/worker/workspace/obj-build/widget/gtk -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/layout/base -I/builds/worker/checkouts/gecko/layout/forms -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/layout/xul -I/builds/worker/checkouts/gecko/other-licenses/atk-1.0 -I/builds/worker/checkouts/gecko/third_party/cups/include -I/builds/worker/checkouts/gecko/widget -I/builds/worker/checkouts/gecko/widget/headless -I/builds/worker/checkouts/gecko/widget/x11 -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fno-exceptions -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -gdwarf-4 -O2 -fno-omit-frame-pointer -funwind-tables -Werror -Wall -Wempty-body -Wignored-qualifiers -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wno-invalid-offsetof -Wc++2a-compat -Wcomma-subscript -Wvolatile -Wno-error=deprecated -Wno-error=deprecated-enum-enum-conversion -Wduplicated-cond -Wimplicit-fallthrough -Wlogical-op -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-multistatement-macros -Wno-error=class-memaccess -Wformat -Wformat-overflow=2 -Wno-psabi -Wno-error=builtin-macro-redefined -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pango-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/glib-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/cairo -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pixman-1 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/freetype2 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/libpng12 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gdk-pixbuf-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gio-unix-2.0/ -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/harfbuzz -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/atk-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/at-spi2-atk/2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/at-spi-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/dbus-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/dbus-1.0/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/unix-print -pthread -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pango-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/glib-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/cairo -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pixman-1 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/freetype2 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/libpng12 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gdk-pixbuf-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gio-unix-2.0/ -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/harfbuzz -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/atk-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/at-spi2-atk/2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/at-spi-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/dbus-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/dbus-1.0/include -pthread -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/dbus-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/dbus-1.0/include -Werror=switch -fno-strict-aliasing -ffp-contract=off  -MD -MP -MF .deps/Unified_cpp_widget_gtk2.o.pp   Unified_cpp_widget_gtk2.cpp
[task 2024-01-31T05:41:54.154Z] 05:41:54     INFO -  In file included from Unified_cpp_widget_gtk2.cpp:56:
[task 2024-01-31T05:41:54.155Z] 05:41:54     INFO -  /builds/worker/checkouts/gecko/widget/gtk/nsFilePicker.cpp: In function 'void UpdateFilePreviewWidget(GtkFileChooser*, gpointer)':
[task 2024-01-31T05:41:54.156Z] 05:41:54  WARNING -  /builds/worker/checkouts/gecko/widget/gtk/nsFilePicker.cpp:140:23: warning: 'void gtk_misc_set_padding(GtkMisc*, gint, gint)' is deprecated [-Wdeprecated-declarations]
[task 2024-01-31T05:41:54.157Z] 05:41:54     INFO -    140 |   gtk_misc_set_padding(GTK_MISC(preview_widget), x_padding, 0);
[task 2024-01-31T05:41:54.158Z] 05:41:54     INFO -        |   ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2024-01-31T05:41:54.158Z] 05:41:54     INFO -  In file included from /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtklabel.h:33,
[task 2024-01-31T05:41:54.159Z] 05:41:54     INFO -                   from /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtkaccellabel.h:36,
[task 2024-01-31T05:41:54.160Z] 05:41:54     INFO -                   from /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtk.h:33,
[task 2024-01-31T05:41:54.161Z] 05:41:54     INFO -                   from /builds/worker/workspace/obj-build/dist/system_wrappers/gtk/gtk.h:3,
[task 2024-01-31T05:41:54.162Z] 05:41:54     INFO -                   from /builds/worker/checkouts/gecko/widget/gtk/GUniquePtr.h:12,
[task 2024-01-31T05:41:54.162Z] 05:41:54     INFO -                   from /builds/worker/checkouts/gecko/widget/gtk/nsClipboard.h:17,
[task 2024-01-31T05:41:54.163Z] 05:41:54     INFO -                   from /builds/worker/checkouts/gecko/widget/gtk/nsClipboard.cpp:11,
[task 2024-01-31T05:41:54.164Z] 05:41:54     INFO -                   from Unified_cpp_widget_gtk2.cpp:2:
[task 2024-01-31T05:41:54.165Z] 05:41:54     INFO -  /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/deprecated/gtkmisc.h:80:9: note: declared here
[task 2024-01-31T05:41:54.166Z] 05:41:54     INFO -     80 | void    gtk_misc_set_padding   (GtkMisc *misc,
[task 2024-01-31T05:41:54.166Z] 05:41:54     INFO -        |         ^~~~~~~~~~~~~~~~~~~~
[task 2024-01-31T05:41:54.167Z] 05:41:54     INFO -  In file included from Unified_cpp_widget_gtk2.cpp:56:
[task 2024-01-31T05:41:54.168Z] 05:41:54     INFO -  /builds/worker/checkouts/gecko/widget/gtk/nsFilePicker.cpp: In member function 'void* nsFilePicker::GtkFileChooserNew(const gchar*, GtkWindow*, GtkFileChooserAction, const gchar*)':
[task 2024-01-31T05:41:54.169Z] 05:41:54  WARNING -  /builds/worker/checkouts/gecko/widget/gtk/nsFilePicker.cpp:730:42: warning: 'void gtk_dialog_set_alternative_button_order(GtkDialog*, gint, ...)' is deprecated [-Wdeprecated-declarations]
[task 2024-01-31T05:41:54.170Z] 05:41:54     INFO -    730 |   gtk_dialog_set_alternative_button_order(
[task 2024-01-31T05:41:54.170Z] 05:41:54     INFO -        |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
[task 2024-01-31T05:41:54.171Z] 05:41:54     INFO -    731 |       GTK_DIALOG(file_chooser), GTK_RESPONSE_ACCEPT, GTK_RESPONSE_CANCEL, -1);
[task 2024-01-31T05:41:54.172Z] 05:41:54     INFO -        |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2024-01-31T05:41:54.173Z] 05:41:54     INFO -  In file included from /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtkaboutdialog.h:30,
[task 2024-01-31T05:41:54.174Z] 05:41:54     INFO -                   from /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtk.h:31,
[task 2024-01-31T05:41:54.174Z] 05:41:54     INFO -                   from /builds/worker/workspace/obj-build/dist/system_wrappers/gtk/gtk.h:3,
[task 2024-01-31T05:41:54.175Z] 05:41:54     INFO -                   from /builds/worker/checkouts/gecko/widget/gtk/GUniquePtr.h:12,
[task 2024-01-31T05:41:54.176Z] 05:41:54     INFO -                   from /builds/worker/checkouts/gecko/widget/gtk/nsClipboard.h:17,
[task 2024-01-31T05:41:54.177Z] 05:41:54     INFO -                   from /builds/worker/checkouts/gecko/widget/gtk/nsClipboard.cpp:11,
[task 2024-01-31T05:41:54.177Z] 05:41:54     INFO -                   from Unified_cpp_widget_gtk2.cpp:2:
[task 2024-01-31T05:41:54.178Z] 05:41:54     INFO -  /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtkdialog.h:187:10: note: declared here
[task 2024-01-31T05:41:54.179Z] 05:41:54     INFO -    187 | void     gtk_dialog_set_alternative_button_order (GtkDialog *dialog,
[task 2024-01-31T05:41:54.180Z] 05:41:54     INFO -        |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2024-01-31T05:41:54.181Z] 05:41:54     INFO -  In file included from Unified_cpp_widget_gtk2.cpp:83:
[task 2024-01-31T05:41:54.181Z] 05:41:54     INFO -  /builds/worker/checkouts/gecko/widget/gtk/nsLookAndFeel.cpp: In function 'bool GetUnicoBorderGradientColors(GtkStyleContext*, GdkRGBA*, GdkRGBA*)':
[task 2024-01-31T05:41:54.182Z] 05:41:54  WARNING -  /builds/worker/checkouts/gecko/widget/gtk/nsLookAndFeel.cpp:386:44: warning: 'gboolean gtk_style_properties_lookup_property(const gchar*, gboolean (**)(const gchar*, GValue*, GError**), GParamSpec**)' is deprecated [-Wdeprecated-declarations]
[task 2024-01-31T05:41:54.183Z] 05:41:54     INFO -    386 |   if (!gtk_style_properties_lookup_property(propertyName, nullptr, nullptr))
[task 2024-01-31T05:41:54.184Z] 05:41:54     INFO -        |        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2024-01-31T05:41:54.185Z] 05:41:54     INFO -  In file included from /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtkstyleprovider.h:28,
[task 2024-01-31T05:41:54.185Z] 05:41:54     INFO -                   from /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtkstylecontext.h:27,
[task 2024-01-31T05:41:54.186Z] 05:41:54     INFO -                   from /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtkicontheme.h:27,
[task 2024-01-31T05:41:54.187Z] 05:41:54     INFO -                   from /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtk.h:119,
[task 2024-01-31T05:41:54.188Z] 05:41:54     INFO -                   from /builds/worker/workspace/obj-build/dist/system_wrappers/gtk/gtk.h:3,
[task 2024-01-31T05:41:54.188Z] 05:41:54     INFO -                   from /builds/worker/checkouts/gecko/widget/gtk/GUniquePtr.h:12,
[task 2024-01-31T05:41:54.188Z] 05:41:54     INFO -                   from /builds/worker/checkouts/gecko/widget/gtk/nsClipboard.h:17,
[task 2024-01-31T05:41:54.189Z] 05:41:54     INFO -                   from /builds/worker/checkouts/gecko/widget/gtk/nsClipboard.cpp:11,
[task 2024-01-31T05:41:54.189Z] 05:41:54     INFO -                   from Unified_cpp_widget_gtk2.cpp:2:
[task 2024-01-31T05:41:54.189Z] 05:41:54     INFO -  /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtkstyleproperties.h:76:10: note: declared here
[task 2024-01-31T05:41:54.189Z] 05:41:54     INFO -     76 | gboolean gtk_style_properties_lookup_property   (const gchar             *property_name,
[task 2024-01-31T05:41:54.189Z] 05:41:54     INFO -        |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2024-01-31T05:41:54.189Z] 05:41:54     INFO -  In file included from Unified_cpp_widget_gtk2.cpp:83:
[task 2024-01-31T05:41:54.189Z] 05:41:54     INFO -  /builds/worker/checkouts/gecko/widget/gtk/nsLookAndFeel.cpp: In lambda function:
[task 2024-01-31T05:41:54.189Z] 05:41:54    ERROR -  /builds/worker/checkouts/gecko/widget/gtk/nsLookAndFeel.cpp:1646:21: error: loop variable 'mapping' creates a copy from type 'const nsLookAndFeel::InitializeGlobalSettings()::actionMapping' [-Werror=range-loop-construct]
[task 2024-01-31T05:41:54.190Z] 05:41:54     INFO -   1646 |     for (auto const mapping : ActionMapping) {
[task 2024-01-31T05:41:54.190Z] 05:41:54     INFO -        |                     ^~~~~~~
[task 2024-01-31T05:41:54.190Z] 05:41:54     INFO -  /builds/worker/checkouts/gecko/widget/gtk/nsLookAndFeel.cpp:1646:21: note: use reference type to prevent copying
[task 2024-01-31T05:41:54.190Z] 05:41:54     INFO -   1646 |     for (auto const mapping : ActionMapping) {
[task 2024-01-31T05:41:54.190Z] 05:41:54     INFO -        |                     ^~~~~~~
[task 2024-01-31T05:41:54.190Z] 05:41:54     INFO -        |                     &
[task 2024-01-31T05:41:54.190Z] 05:41:54     INFO -  /builds/worker/checkouts/gecko/widget/gtk/nsLookAndFeel.cpp: In member function 'void nsLookAndFeel::PerThemeData::Init()':
[task 2024-01-31T05:41:54.190Z] 05:41:54  WARNING -  /builds/worker/checkouts/gecko/widget/gtk/nsLookAndFeel.cpp:2183:31: warning: 'void gtk_style_context_add_region(GtkStyleContext*, const gchar*, GtkRegionFlags)' is deprecated [-Wdeprecated-declarations]
[task 2024-01-31T05:41:54.191Z] 05:41:54     INFO -   2183 |   gtk_style_context_add_region(style, GTK_STYLE_REGION_ROW, GTK_REGION_ODD);
[task 2024-01-31T05:41:54.191Z] 05:41:54     INFO -        |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2024-01-31T05:41:54.191Z] 05:41:54     INFO -  In file included from /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtkicontheme.h:27,
[task 2024-01-31T05:41:54.191Z] 05:41:54     INFO -                   from /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtk.h:119,
[task 2024-01-31T05:41:54.191Z] 05:41:54     INFO -                   from /builds/worker/workspace/obj-build/dist/system_wrappers/gtk/gtk.h:3,
[task 2024-01-31T05:41:54.191Z] 05:41:54     INFO -                   from /builds/worker/checkouts/gecko/widget/gtk/GUniquePtr.h:12,
[task 2024-01-31T05:41:54.191Z] 05:41:54     INFO -                   from /builds/worker/checkouts/gecko/widget/gtk/nsClipboard.h:17,
[task 2024-01-31T05:41:54.191Z] 05:41:54     INFO -                   from /builds/worker/checkouts/gecko/widget/gtk/nsClipboard.cpp:11,
[task 2024-01-31T05:41:54.191Z] 05:41:54     INFO -                   from Unified_cpp_widget_gtk2.cpp:2:
[task 2024-01-31T05:41:54.191Z] 05:41:54     INFO -  /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtkstylecontext.h:994:10: note: declared here
[task 2024-01-31T05:41:54.192Z] 05:41:54     INFO -    994 | void     gtk_style_context_add_region    (GtkStyleContext    *context,
[task 2024-01-31T05:41:54.192Z] 05:41:54     INFO -        |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2024-01-31T05:41:54.192Z] 05:41:54     INFO -  In file included from Unified_cpp_widget_gtk2.cpp:92:
[task 2024-01-31T05:41:54.192Z] 05:41:54     INFO -  /builds/worker/checkouts/gecko/widget/gtk/nsPrintDialogGTK.cpp: In function 'void ShowCustomDialog(GtkComboBox*, gpointer)':
[task 2024-01-31T05:41:54.192Z] 05:41:54  WARNING -  /builds/worker/checkouts/gecko/widget/gtk/nsPrintDialogGTK.cpp:78:42: warning: 'void gtk_dialog_set_alternative_button_order(GtkDialog*, gint, ...)' is deprecated [-Wdeprecated-declarations]
[task 2024-01-31T05:41:54.192Z] 05:41:54     INFO -     78 |   gtk_dialog_set_alternative_button_order(
[task 2024-01-31T05:41:54.192Z] 05:41:54     INFO -        |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
[task 2024-01-31T05:41:54.192Z] 05:41:54     INFO -     79 |       GTK_DIALOG(prompt_dialog), GTK_RESPONSE_ACCEPT, GTK_RESPONSE_REJECT, -1);
[task 2024-01-31T05:41:54.192Z] 05:41:54     INFO -        |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2024-01-31T05:41:54.192Z] 05:41:54     INFO -  In file included from /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtkaboutdialog.h:30,
[task 2024-01-31T05:41:54.193Z] 05:41:54     INFO -                   from /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtk.h:31,
[task 2024-01-31T05:41:54.193Z] 05:41:54     INFO -                   from /builds/worker/workspace/obj-build/dist/system_wrappers/gtk/gtk.h:3,
[task 2024-01-31T05:41:54.193Z] 05:41:54     INFO -                   from /builds/worker/checkouts/gecko/widget/gtk/GUniquePtr.h:12,
[task 2024-01-31T05:41:54.193Z] 05:41:54     INFO -                   from /builds/worker/checkouts/gecko/widget/gtk/nsClipboard.h:17,
[task 2024-01-31T05:41:54.193Z] 05:41:54     INFO -                   from /builds/worker/checkouts/gecko/widget/gtk/nsClipboard.cpp:11,
[task 2024-01-31T05:41:54.193Z] 05:41:54     INFO -                   from Unified_cpp_widget_gtk2.cpp:2:
[task 2024-01-31T05:41:54.193Z] 05:41:54     INFO -  /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtkdialog.h:187:10: note: declared here
[task 2024-01-31T05:41:54.193Z] 05:41:54     INFO -    187 | void     gtk_dialog_set_alternative_button_order (GtkDialog *dialog,
[task 2024-01-31T05:41:54.193Z] 05:41:54     INFO -        |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2024-01-31T05:41:54.193Z] 05:41:54     INFO -  In file included from Unified_cpp_widget_gtk2.cpp:92:
[task 2024-01-31T05:41:54.194Z] 05:41:54  WARNING -  /builds/worker/checkouts/gecko/widget/gtk/nsPrintDialogGTK.cpp:86:31: warning: 'GtkWidget* gtk_image_new_from_stock(const gchar*, GtkIconSize)' is deprecated: Use 'gtk_image_new_from_icon_name' instead [-Wdeprecated-declarations]
[task 2024-01-31T05:41:54.194Z] 05:41:54     INFO -     86 |       gtk_image_new_from_stock(GTK_STOCK_DIALOG_QUESTION, GTK_ICON_SIZE_DIALOG);
[task 2024-01-31T05:41:54.194Z] 05:41:54     INFO -        |       ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2024-01-31T05:41:54.194Z] 05:41:54     INFO -  In file included from /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtkentry.h:42,
[task 2024-01-31T05:41:54.194Z] 05:41:54     INFO -                   from /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtktreeview.h:29,
[task 2024-01-31T05:41:54.194Z] 05:41:54     INFO -                   from /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtkcombobox.h:27,
[task 2024-01-31T05:41:54.194Z] 05:41:54     INFO -                   from /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtkappchooserbutton.h:29,
[task 2024-01-31T05:41:54.194Z] 05:41:54     INFO -                   from /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtk.h:42,
[task 2024-01-31T05:41:54.194Z] 05:41:54     INFO -                   from /builds/worker/workspace/obj-build/dist/system_wrappers/gtk/gtk.h:3,
[task 2024-01-31T05:41:54.195Z] 05:41:54     INFO -                   from /builds/worker/checkouts/gecko/widget/gtk/GUniquePtr.h:12,
[task 2024-01-31T05:41:54.195Z] 05:41:54     INFO -                   from /builds/worker/checkouts/gecko/widget/gtk/nsClipboard.h:17,
[task 2024-01-31T05:41:54.195Z] 05:41:54     INFO -                   from /builds/worker/checkouts/gecko/widget/gtk/nsClipboard.cpp:11,
[task 2024-01-31T05:41:54.195Z] 05:41:54     INFO -                   from Unified_cpp_widget_gtk2.cpp:2:
[task 2024-01-31T05:41:54.195Z] 05:41:54     INFO -  /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtkimage.h:122:12: note: declared here
[task 2024-01-31T05:41:54.195Z] 05:41:54     INFO -    122 | GtkWidget* gtk_image_new_from_stock     (const gchar     *stock_id,
[task 2024-01-31T05:41:54.195Z] 05:41:54     INFO -        |            ^~~~~~~~~~~~~~~~~~~~~~~~
[task 2024-01-31T05:41:54.195Z] 05:41:54     INFO -  In file included from Unified_cpp_widget_gtk2.cpp:92:
<...>

Hi Martin! Can you please take a look at this?
Thank you!

Flags: needinfo?(stransky)

Set release status flags based on info from the regressing bug 1539998

Flags: needinfo?(stransky)
Assignee: nobody → stransky
Status: NEW → ASSIGNED
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/ec3d7aa71aec [Linux] Don't copy TitlebarAction during iteration r=emilio
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 124 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: