Bug 1877618 [Linux] Don't copy TitlebarAction during iteration r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D200152